# CodeReviewAI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: env_example  logging_config.py  main.py  settings.py
app/api/: review.py
app/docker/: Dockerfile
app/services/: github_service.py  openai_service.py
app/utils/: cache.py
docker/nginx/: default.conf
tests/: test_github_service.py  test_openai_service.py  test_review_endpoint.py  test_startup_shutdown.py
